{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 144,
  "lineage": "23b569aa-c3d8-9a56-0802-1fdc198c3dba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0576bfc9d27ee13a7",
            "association_id": "eipassoc-0b011a51a67f5a273",
            "domain": "vpc",
            "id": "eipalloc-0576bfc9d27ee13a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-071c05284379a5271",
            "private_dns": "ip-10-0-0-95.ec2.internal",
            "private_ip": "10.0.0.95",
            "public_dns": "ec2-54-204-193-89.compute-1.amazonaws.com",
            "public_ip": "54.204.193.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic_IP"
            },
            "tags_all": {
              "Name": "Elastic_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:690789352038:instance/i-051e633507c47750e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051e633507c47750e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nverginia",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046dfa0470fbbc4c3",
            "private_dns": "ip-10-0-0-128.ec2.internal",
            "private_ip": "10.0.0.128",
            "public_ip": "23.20.23.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05283d21aa0e8bb70",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b6299fffc23eaeb",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9b7bbed4e80ce3a"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-ins-sg",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:690789352038:instance/i-02852944c96753d51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02852944c96753d51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nverginia",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3f4de237028ef56",
            "private_dns": "ip-10-0-6-66.ec2.internal",
            "private_ip": "10.0.6.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08825768c77fb85e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d87995b6b7edeefb",
            "tags": {
              "Name": "nginx"
            },
            "tags_all": {
              "Name": "nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08790527a3af30994"
            ]
          },
          "dependencies": [
            "aws_instance.Bastion",
            "aws_security_group.priv-ins-sg",
            "aws_security_group.pub-ins-sg",
            "aws_subnet.priv-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:internet-gateway/igw-0579415d4e568ab98",
            "id": "igw-0579415d4e568ab98",
            "owner_id": "690789352038",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0576bfc9d27ee13a7",
            "connectivity_type": "public",
            "id": "nat-0b359d98cdcbc747d",
            "network_interface_id": "eni-06d370a4936b30504",
            "private_ip": "10.0.0.222",
            "public_ip": "54.204.193.89",
            "subnet_id": "subnet-05b6299fffc23eaeb",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:route-table/rtb-0ea2127b249f33c7b",
            "id": "rtb-0ea2127b249f33c7b",
            "owner_id": "690789352038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b359d98cdcbc747d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.ngw",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:route-table/rtb-0a46bfbebcebc764c",
            "id": "rtb-0a46bfbebcebc764c",
            "owner_id": "690789352038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0579415d4e568ab98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8007fb374b60fa6",
            "route_table_id": "rtb-0ea2127b249f33c7b",
            "subnet_id": "subnet-0d87995b6b7edeefb"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv-route",
            "aws_subnet.priv-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d88f4ad9b99f1e03",
            "route_table_id": "rtb-0ea2127b249f33c7b",
            "subnet_id": "subnet-0587c7d5215b317ab"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv-route",
            "aws_subnet.priv-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0110bddfbb5a88ec8",
            "route_table_id": "rtb-0a46bfbebcebc764c",
            "subnet_id": "subnet-05b6299fffc23eaeb"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d391f2d6a4ea71af",
            "route_table_id": "rtb-0a46bfbebcebc764c",
            "subnet_id": "subnet-060a7b86394027bbc"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5721c47a8f7780f",
            "route_table_id": "rtb-0a46bfbebcebc764c",
            "subnet_id": "subnet-003764bc13237fee9"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b7046e28f065a7",
            "route_table_id": "rtb-0a46bfbebcebc764c",
            "subnet_id": "subnet-0978baee87e608c0c"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bb14205ced0012f",
            "route_table_id": "rtb-0a46bfbebcebc764c",
            "subnet_id": "subnet-0ac04943093096230"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a575870787eed553",
            "route_table_id": "rtb-0a46bfbebcebc764c",
            "subnet_id": "subnet-0cde5025832aef2b3"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv-ins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:security-group/sg-08790527a3af30994",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08790527a3af30994",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.128/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220207210251981500000002",
            "name_prefix": "terraform-",
            "owner_id": "690789352038",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Bastion",
            "aws_security_group.pub-ins-sg",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-ins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:security-group/sg-0d9b7bbed4e80ce3a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d9b7bbed4e80ce3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "59.97.247.43/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220207210146464300000001",
            "name_prefix": "terraform-",
            "owner_id": "690789352038",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-0d87995b6b7edeefb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d87995b6b7edeefb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet"
            },
            "tags_all": {
              "Name": "priv-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-0587c7d5215b317ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0587c7d5215b317ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet"
            },
            "tags_all": {
              "Name": "priv-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-05b6299fffc23eaeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b6299fffc23eaeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-060a7b86394027bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060a7b86394027bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-003764bc13237fee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003764bc13237fee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-0978baee87e608c0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0978baee87e608c0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-0ac04943093096230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac04943093096230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:subnet/subnet-0cde5025832aef2b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde5025832aef2b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690789352038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-03b50d1776e7240be"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ninja-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690789352038:vpc/vpc-03b50d1776e7240be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2af2cf618d23a00",
            "default_route_table_id": "rtb-0b750a4b6f4df3f81",
            "default_security_group_id": "sg-0a9beec95a2361160",
            "dhcp_options_id": "dopt-0ea79067002feea51",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03b50d1776e7240be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b750a4b6f4df3f81",
            "owner_id": "690789352038",
            "tags": {
              "Name": "vpc_ngnix"
            },
            "tags_all": {
              "Name": "vpc_ngnix"
            }
          }
        }
      ]
    }
  ]
}